change author and update version

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Remaining Casts
-author=Salverrs
+author=xmopi
 support=
 description=Displays the number of casts remaining for your spells.
 tags=remaining,casts,magic,spell,rune,tracker
